--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -5,8 +5,21 @@
 
 <hr>
 
-<ul>
+{% if error_message %}
+    <p><strong>{{ error_message }}</strong></p>
+{% endif %}
+
+<form action="{% url "music:favorite" album.id %}" method="post">
+    {% csrf_token %}
+
     {% for song in album.song_set.all %}
-        <li>{{ song.song_title }} - {{ song.file_type }}</li>
+        <input type="radio" id="song{{ song.id }}" name="song" value="{{ song.id }}">
+        <label for="song{{ forloop.counter }}">
+            {{ song.song_title }}
+            {% if song.is_favotite %}
+                <img src="http://i.imgur.com/b9b13Rd.png" alt="">
+            {% endif %}
+        </label><br>
     {% endfor %}
-</ul>
+    <input type="submit" value="Favorite">
+</form>
