--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -1,25 +1,30 @@
-<img src="{{ album.album_logo }}" alt="" style="max-width: 100px">
+{% extends 'music/base.html' %}
+{% block title %}Album Details{% endblock %}
 
-<h1>{{ album.album_title }}</h1>
-<h3>{{ album.artist }}</h3>
+{% block body %}
+    <img src="{{ album.album_logo }}" alt="" style="max-width: 100px">
 
-<hr>
+    <h1>{{ album.album_title }}</h1>
+    <h3>{{ album.artist }}</h3>
 
-{% if error_message %}
-    <p><strong>{{ error_message }}</strong></p>
-{% endif %}
+    <hr>
 
-<form action="{% url "music:favorite" album.id %}" method="post">
-    {% csrf_token %}
+    {% if error_message %}
+        <p><strong>{{ error_message }}</strong></p>
+    {% endif %}
 
-    {% for song in album.song_set.all %}
-        <input type="radio" id="song{{ song.id }}" name="song" value="{{ song.id }}">
-        <label for="song{{ forloop.counter }}">
-            {{ song.song_title }}
-            {% if song.is_favotite %}
-                <img src="http://i.imgur.com/b9b13Rd.png" alt="">
-            {% endif %}
-        </label><br>
-    {% endfor %}
-    <input type="submit" value="Favorite">
-</form>
+    <form action="{% url "music:favorite" album.id %}" method="post">
+        {% csrf_token %}
+
+        {% for song in album.song_set.all %}
+            <input type="radio" id="song{{ song.id }}" name="song" value="{{ song.id }}">
+            <label for="song{{ forloop.counter }}">
+                {{ song.song_title }}
+                {% if song.is_favotite %}
+                    <img src="http://i.imgur.com/b9b13Rd.png" alt="">
+                {% endif %}
+            </label><br>
+        {% endfor %}
+        <input type="submit" value="Favorite">
+    </form>
+{% endblock %}
